--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
     </li>
     <li class="header">Administration</li>
     <li>
-      <a href="#">
+      <a routerLink="/dashboard/products">
         Produits <i class="fas fa-chevron-circle-right" aria-hidden="true"></i>
       </a>
     </li>
@@ -56,7 +56,9 @@
 
   <div class="container-fluid">
 
-    <app-show-product></app-show-product>
+    <router-outlet></router-outlet>
+
+<!--<app-show-product></app-show-product>-->
 
 
     <!-- <div class="jumbotron">
