--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,6 @@
         </div>
         <div class="topnav-right">
           <ul>
-            <li><a routerLink="/account">Mon compte</a></li>
             <li><a routerLink="/wishlist"> Mes préférés</a></li>
             <li><a routerLink="/checkout">Paiement</a></li>
           </ul>
@@ -24,9 +23,9 @@
             <li routerLinkActive="active"><a class="active" routerLink="/home">Accueil</a></li>
             <li routerLinkActive="active"><a routerLink="/shop">Boutique</a></li>
             <li routerLinkActive="active"><a routerLink="/contact">Contact</a></li>
-            <li routerLinkActive="active"><a *ngIf="isSuperAdmin || isAdmin" routerLink="/components/dashboard">Dashboard</a></li>
+            <li routerLinkActive="active"><a *ngIf="isSuperAdmin || isAdmin" routerLink="/dashboard">Dashboard</a></li>
 
-            <button id="btn-menu" type="button" pButton pRipple icon="pi pi-bars" label="Compte" (click)="menu.toggle($event)"></button>
+            <button id="btn-menu" type="button" pButton pRipple icon="pi pi-user"  (click)="menu.toggle($event)"></button>
             <p-menu #menu [popup]="true" [model]="items"></p-menu>
           </ul>
         </div>
