--- a/src/app/shop/shop.component.css
+++ b/src/app/shop/shop.component.css
@@ -37,126 +37,63 @@ a{
 }
 
 /* page shop */
-.container{
-  height: 1000px;
-  padding: 20px 0;
-  margin: 0 auto;
-  width: 1000px;
-  display: flex;
-}
-
-.content-sidenav{
-  width: 200px;
-  background-color: white;
-  margin-right: 30px;
-  height: 210px;
-}
-
-ul.nav-list{
-  float: right;
-  width: 200px;
-  padding-left: 0;
-  cursor: pointer;
-}
-
-a#active{
-  color: white;
-  background-color: #fc5356;
-}
-
-a.nav-link{
-  color: black;
-  font-weight: bold;
-}
-
-a.nav-link:hover{
-  color: white;
-  background-color: #fc5356;
-}
-
-/* content area */
-.content-area{
-  background-color: white;
-  width: 100%;
-  padding: 30px;
-  height: 800px;
-}
-
-
 .container {
-  height: 800px;
-}
-.col-md-3 {
-  bottom: 0;
+  height: 200px;
+  width: 1000px;
 }
 
-.product-wrapper, .product-img {
-  overflow: hidden;
-  position: relative;
-}
-
-
-.product-action {
-  bottom: 0px;
-  left: 0;
-  right: 0;
-  opacity: 0;
-  position: absolute;
-  text-align: center;
-  transition: all 0.6s ease 0s
-}
-
-.product-wrapper {
-  border-radius: 0.7rem;
-  margin-bottom: 20px;
-}
-
-.product-img>span {
-  background-color: #fff;
-  color: #fc5356;
-  display: inline-block;
-  padding: 3px 12px;
-  position: absolute;
-  left: 10px;
-  top: 10px;
-  box-shadow: 0 0 8px 1.7px black;
-  font-size: 12px;
-  font-weight: bold;
-  letter-spacing: 1px;
-  text-align: center;
-}
-
-.product-action-style{
-  background-color: #fff;
-  box-shadow: 0 0 8px 1.7px black;
-  display: inline-block;
-  padding: 16px 2px 12px
-}
-
-.product-action-style>a {
-  color: #fc5356;
-  line-height: 1;
-  padding: 0 21px;
-  position: relative
-}
-
-.product-action-style>p {
-  color: #fc5356;
-  font-weight: bold;
+.col-md-6, .mr-1 {
   font-family: 'Zen Antique', serif;
+  color: black;
 }
 
-.product-action-style>a.action-plus {
-  font-size: 18px
+.btn-primary {
+  font-weight: bold;
+  background-color: #fc5356;
+  border: none;
 }
 
-.product-wrapper:hover .product-action {
-  bottom: 20px;
-  opacity: 1;
+.btn-outline-primary {
+  font-weight: bold;
+ color: black;
+ border: 1px solid black;
 }
 
-.row{
-  width: 1400px;
+.text-success {
+  font-weight: bold;
+}
+
+#btn-cart {
+  height: 30px;
+  width: 40px;
+  margin-right: 2rem;
+}
+
+#btn-cart:hover {
+  color: #fff;
+  background-color: #fc5356;
+}
+
+.btn-outline-primary:hover {
+  border: none;
+  color: #fff;
+  background-color: #fc5356;
+}
+
+.col-md-6 {
+  width: 400px;
 }
 
 
+.product-image {
+ height: 180px;
+}
+
+h5 {
+  font-weight: 400
+}
+
+.para {
+  font-size: 16px;
+
+}
