--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -15,39 +15,40 @@
   </div>
 </nav>
 
-<div class="row">
-  <div class="col-md-4 col-sm-12">
-    <ul class="nav-list">
-      <a class="nav-link" id="active"> Matériel informatique</a>
-      <a class="nav-link">Fournitures de bureau</a>
-      <a class="nav-link ">Fournitures scolaires</a>
-      <a class="nav-link">Autres</a>
-      <a class="nav-link">Retour</a>
-    </ul>
-  </div>
-  <div class="col-md-6 pr-1 col-sm-12" >
-    <div class="row">
-      <div class="col-md-3" *ngFor="let article of articles">
-        <div class="product-wrapper mb-15 text-center">
-          <div class="product-img"> <a href="#" data-abc="true">
-            <img [src]="article.article_picture" alt=""  class="img-fluid">
-           </a> <span class="text-center"> {{article.article_price}} FCFA</span>
-            <div class="product-action">
-              <div class="product-action-style">
-                <p>{{ article.article_name }}</p>
-                <a href="#"><i class="fa fa-plus"></i></a>
-                <a href="#"><i class="fas fa-times"></i></a>
-                <a href="#"><i class="fa fa-shopping-cart"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
+
+
+<div class="container mt-3 mb-4" *ngFor="let article of articles">
+  <div class="d-flex justify-content-center row p-2 bg-white border rounded">
+    <div class="col-md-3 mt-1">
+      <img class="img-fluid img-responsive rounded product-image" [src]="article.article_picture">
+    </div>
+    <div class="col-md-6 mt-1">
+      <h5>{{article.article_name}}</h5>
+      <p class="para mb-0">{{article.article_description}}<br><br></p>
+    </div>
+    <div class="align-items-center align-content-center col-md-3 border-left mt-1">
+      <div class="d-flex flex-row align-items-center">
+        <h4 class="mr-1">{{article.article_price}} Fcfa</h4>
+      </div>
+      <div class="cat-cart d-flex">
+        <button id="btn-cart" pButton pRipple icon="pi pi-shopping-cart" type="button" (click)="addToCart(article)"
+        class="p-button-outlined p-button-rounded p-button-success" [disabled]="article.article_quantity < 1"></button>
+        <h6 class="text-success">{{article.article_category}}</h6>
+      </div>
+      <div class="d-flex flex-column mt-4">
+        <button class="btn btn-primary btn-sm" type="button">Details</button>
+        <button class="btn btn-outline-primary btn-sm mt-2" type="button">Ajouter aux préférences</button>
       </div>
     </div>
   </div>
 </div>
 
 <p-paginator [rows]="nbProduct" [totalRecords]="total" (onPageChange)="paginate($event)"></p-paginator>
+
+<!--
+
+-->
+
 
 
        <!-- <div *ngFor="let article of articles">
