formulaire d'inscription et commandes

--- a/src/app/components/conditions-generales-de-vente/conditions-generales-de-vente.component.html
+++ b/src/app/components/conditions-generales-de-vente/conditions-generales-de-vente.component.html
@@ -38,7 +38,7 @@
     Celles-ci peuvent être acceptées par le client conformément au processus décrit ci-après. <br><br>
     Le client peut passer une commande par le biais du formulaire de commande intégré dans la boutique en ligne et accepter ainsi l'offre.
     Lors d'une commande via le formulaire en ligne, le client, après avoir saisi les informations personnelles relatives à la commande
-    et cliqué sur le bouton achevant la commande (« Confirmer la commande »), émet une déclaration d'acceptation ferme de l'offre se rapportant
+    et cliqué sur le bouton achevant la commande (« Commander »), émet une déclaration d'acceptation ferme de l'offre se rapportant
     aux marchandises contenues dans son panier de commande. <br><br>
     Global Support Services adresse au client un accusé réception (par voie électronique) de la commande qui lui est transmis. <br><br>
     Avant de passer une commande ferme et définitive via le formulaire en ligne, le client a la possibilité de corriger
@@ -73,7 +73,7 @@
     en cas d'intention délictuelle ou grave négligence,
     en cas d'atteinte volontaire ou par négligence à la vie, à l'intégrité corporelle ou à la santé,
     dans le cadre d'une promesse de garantie et sauf dispositions contraires,
-    dans le cadre d'une responsabilité impérative du fait des produits défectueux.µ
+    dans le cadre d'une responsabilité impérative du fait des produits défectueux.
   </p><br><br>
   <strong>6) Force majeure </strong><br><br>
   <p>La responsabilité de Global ne pourra pas être mise en œuvre si la non-exécution ou le retard dans l’exécution de
