--- a/src/app/components/mentions-legales/mentions-legales.component.html
+++ b/src/app/components/mentions-legales/mentions-legales.component.html
@@ -25,25 +25,25 @@
   <p>Téléphone: +237 691 10 11 81 du Lundi au Vendredi : 8h-17h</p><br><br>
   <p>E-mail: <a href="">info@global-supportservices.com</a></p>
   <p>web: <a href="">global-supportservices.com</a></p><br>
-  <p><b>Représentants légaux :</b> </p><br>
-  <p><b>Immatriculée :</b> </p><br>
-  <p><b>Numéro de TVA :</b> </p><br>
+  <p><b>Représentants légaux : RAS</b> </p><br>
+  <p><b>Immatriculée : RAS</b> </p><br>
+  <p><b>Numéro de TVA : RAS</b> </p><br>
   <p><a href="https://ec.europa.eu/consumers/odr/main/index.cfm?event=main.home.chooseLanguage">Lien vers la plateforme de la Commission Européenne</a> en accord avec le règlement relatif au RLLC (Règlement en Ligne des Litiges de Consommation).</p><br>
   <strong>L’éditeur</strong><br><br>
   <p>L’édition et la direction de la publication du site global-supportservices.com sont assurées par Désirée Bwandji, dont le numéro de téléphone est +237-691-10-11-81, et l'adresse e-mail d.bwandji@global-supportservices.com.</p><br>
   <strong>L’hébergeur</strong><br><br>
   <p>L'hébergeur du site global-supportservices.com est la Société OVH Groupe SAS, dont le siège social est situé au 2 rue Kellermann - 59100 Roubaix - France.</p><br>
   <strong>Conditions d’utilisation :</strong><br><br>
-  <p>Ce site (global-supportservices.com) est proposé en différents langages web (HTML, HTML5, Javascript(Node js,Angular), CSS, etc…) pour un meilleur confort d’utilisation et un graphisme plus agréable.
+  <p>Ce site (global-supportservices.com) est proposé en différents langages web (HTML5, Javascript(Node js,Angular), CSS, TypeScript etc…) pour un meilleur confort d’utilisation et un graphisme plus agréable.
   Nous vous recommandons de recourir à des navigateurs modernes comme Internet explorer, Safari, Firefox, Google Chrome, etc…</p><br><br>
   <strong>Données personnelles :</strong><br><br>
   <p>De manière générale, vous n’êtes pas tenu de nous communiquer vos données personnelles lorsque vous visitez notre site Internet.
     Cependant, ce principe comporte certaines exceptions. En effet, pour certains services proposés par notre site, vous pouvez être amenés à
-    nous communiquer certaines données telles que : votre nom, votre fonction, le nom de votre société, votre adresse électronique, et votre numéro de téléphone et autres.
+    nous communiquer certaines données telles que : votre nom, prenom,votre fonction, le nom de votre société, votre adresse électronique, et votre numéro de téléphone et autres.
     Tel est le cas lorsque vous remplissez le formulaire qui vous est proposé en ligne, dans la rubrique « contact ».
   </p><br><br>
-  <p>Dans tous les cas, vous pouvez refuser de fournir vos données personnelles. Dans ce cas, vous ne pourrez pas utiliser les services du site, notamment celui de
-    solliciter des renseignements sur notre société, ou de recevoir les lettres d’information.Les bases de données sont protégées par les dispositions de la loi du
+  <p>Dans tous les cas, vous pouvez refuser de fournir vos données personnelles. Dans ce cas, vous ne pourrez pas utiliser les services du site, notamment lors des inscriptions, lorsque vous
+    sollicitez des renseignements sur notre société, ou de recevoir les lettres d’information.La base de données est protégée par les dispositions de la loi du
     1er juillet 1998 transposant la directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.
   </p><br><br>
   <p>Le site assure à l'utilisateur une collecte et un traitement d'informations personnelles dans le respect de la vie privée conformément à la loi n°78-17 du 6 janvier 1978
