--- a/src/app/components/politique-de-confidentialite/politique-de-confidentialite.component.html
+++ b/src/app/components/politique-de-confidentialite/politique-de-confidentialite.component.html
@@ -19,7 +19,7 @@
   <img src="assets/img/Content/politique_de_confidentialite/rgpd-confidentialite-politique.jpg" alt=""><br>
   <strong>Notre engagement envers votre vie privée</strong><br><br>
   <p>Global Support Services s’engage à protéger votre vie privée et à assurer que votre visite sur notre site web soit complètement sécurisée.
-    Si vous avez des questions ou des problèmes concernant notre politique de confidentialité ou son application, veuillez nous contacter <a routerLink="/components/mentions-legales">ici</a> .
+    Si vous avez des questions ou des problèmes concernant notre politique de confidentialité ou son application, veuillez nous contacter <a routerLink="/contact">ici</a> .
   </p><br>
   <strong>Introduction</strong><br><br>
   <p>La confidentialité des visiteurs de notre site web est très importante à nos yeux, et nous nous engageons à la protéger.
