--- a/src/app/components/show-product/show-product.component.css
+++ b/src/app/components/show-product/show-product.component.css
@@ -3,8 +3,8 @@
 }
 
 .img-fluid {
-  height: 110px;
-  width: 110px;
+  height: 100%;
+  width: 100%;
   align-items: center;
   text-align: center;
 }
