--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,12 +18,8 @@
             <ul class="footer-links">
               <li><a routerLink="/components/mentions-legales">Mentions légales</a></li>
               <li><a routerLink="/components/politique-de-confidentialite">Politique de confidentialité</a></li>
-              <li><a routerLink="/component/conditions-generales-de-vente">Conditions générales de vente</a></li>
-              <li><a href="http://scanfcode.com/category/c-language/">Informations de livraison</a></li>
-              <li><a href="http://scanfcode.com/category/front-end-development/">Informations de paiement</a></li>
-              <li><a href="http://scanfcode.com/category/back-end-development/">contact</a></li>
-              <li><a href="http://scanfcode.com/category/java-programming-language/">Suivi de commande</a></li>
-              <li><a href="http://scanfcode.com/category/android/">Service Clients</a></li>
+              <li><a routerLink="/components/conditions-generales-de-vente">Conditions générales de vente</a></li>
+              <li><a routerLink="/contact">Service Clients</a></li>
             </ul>
           </div>
 
