--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -36,7 +36,7 @@
         <h6 class="text-success">{{article.article_category}}</h6>
       </div>
       <div class="d-flex flex-column mt-4">
-        <button class="btn btn-primary btn-sm" type="button">Details</button>
+        <button class="btn btn-primary btn-sm" type="button" [routerLink] = "['/single-product/', article.id]">Details</button>
         <button class="btn btn-outline-primary btn-sm mt-2" type="button">Ajouter aux préférences</button>
       </div>
     </div>
