archivage lors de la suppression des articles

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
       </a>
     </li>
     <li>
-      <a href="#">
+      <a routerLink="/dashboard">
         <i class="fa fa-tachometer-alt" aria-hidden="true"></i> Dashboard
       </a>
     </li>
@@ -33,21 +33,6 @@
     <li>
       <a routerLink="/dashboard/products">
         Produits <i class="fas fa-chevron-circle-right" aria-hidden="true"></i>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        commandes <i class="fas fa-chevron-circle-right" aria-hidden="true"></i>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        Clients <i class="fas fa-chevron-circle-right" aria-hidden="true"></i>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        Catégorie <i class="fas fa-chevron-circle-right" aria-hidden="true"></i>
       </a>
     </li>
   </ul>
