--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -24,7 +24,7 @@
           </div>
 
           <div class="col-xs-6 col-md-3">
-            <h6>CONTACTER-NOUS</h6>
+            <h6>CONTACTEZ-NOUS</h6>
             <ul class="footer-links">
               <li>+237 691 10 11 81</li>
               <li>info@global-supportservices.com</li>
