--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,10 +20,10 @@
         </div>
         <div class="nav-contain-right ">
           <ul>
-            <li routerLinkActive="active"><a class="active" routerLink="/home">Accueil</a></li>
-            <li routerLinkActive="active"><a routerLink="/shop">Boutique</a></li>
-            <li routerLinkActive="active"><a routerLink="/contact">Contact</a></li>
-            <li routerLinkActive="active"><a *ngIf="isSuperAdmin || isAdmin" routerLink="/dashboard">Dashboard</a></li>
+            <li ><a class="active" routerLink="/home" [routerLinkActive]="'active'">Accueil</a></li>
+            <li ><a routerLink="/shop" [routerLinkActive]="'active'">Boutique</a></li>
+            <li ><a routerLink="/contact" [routerLinkActive]="'active'">Contact</a></li>
+            <li ><a *ngIf="isSuperAdmin || isAdmin" routerLink="/dashboard" [routerLinkActive]="'active'">Dashboard</a></li>
 
             <button id="btn-menu" type="button" pButton pRipple icon="pi pi-user"  (click)="menu.toggle($event)"></button>
             <p-menu #menu [popup]="true" [model]="items"></p-menu>
