--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -19,21 +19,16 @@
     </div>
     <div class="nav-contain-right">
       <ul>
-        <li routerLinkActive="active"><a class="active" routerLink="/home">Accueil</a></li>
-        <li routerLinkActive="active"><a routerLink="/shop">Boutique</a></li>
-        <li routerLinkActive="active"><a routerLink="/contact">Contact</a></li>
-        <li *ngIf="isSuperAdmin || isAdmin" routerLinkActive="active"><a routerLink="/dashboard">Dashboard</a></li>
+        <li ><a routerLink="/home" [routerLinkActive]="'active'">Accueil</a></li>
+        <li ><a routerLink="/shop" [routerLinkActive]="'active'">Boutique</a></li>
+        <li ><a routerLink="/contact" [routerLinkActive]="'active'">Contact</a></li>
+        <li *ngIf="isSuperAdmin || isAdmin" ><a routerLink="/dashboard" [routerLinkActive]="'active'">Dashboard</a></li>
 
         <button id="btn-menu" type="button" pButton pRipple icon="pi pi-user"  (click)="menu.toggle($event)"></button>
         <p-menu #menu [popup]="true" [model]="items"></p-menu>
 
         <div class="cart-icon">
           <a routerLink="/shop/cart"><i class="fas fa-shopping-cart p-text-secondary" severity="success" pBadge style="font-size: 1.5rem" [value]="cartService.articles.length.toString()"></i></a>
-        </div>
-        <div class="input-group">
-          <input type="search" class="form-control" placeholder="Search" aria-label="Search"
-          aria-describedby="search-addon" />
-          <button type="button" class="btn-search">search</button>
         </div>
       </ul>
     </div>
