--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -15,35 +15,75 @@
   </div>
 </nav>
 
+<div class="mx-auto w-50">
+  <div class="p-inputgroup">
+    <input type="text" [(ngModel)]="searchInput" (ngModelChange)="searchInputChange()" pInputText placeholder="nom de l'article">
+    <button type="button" pButton pRipple label="Rechercher" id="search-btn"></button>
+</div>
+</div>
 
-
-<div class="container mt-3 mb-4" *ngFor="let article of articles">
-  <div class="d-flex justify-content-center row p-2 bg-white border rounded">
-    <div class="col-md-3 mt-1">
-      <img class="img-fluid img-responsive rounded product-image" [src]="article.article_picture">
-    </div>
-    <div class="col-md-6 mt-1">
-      <h5>{{article.article_name}}</h5>
-      <p class="para mb-0">{{article.article_description}}<br><br></p>
-    </div>
-    <div class="align-items-center align-content-center col-md-3 border-left mt-1">
-      <div class="d-flex flex-row align-items-center">
-        <h4 class="mr-1">{{article.article_price}} Fcfa</h4>
+<div *ngIf="showSearchResult">
+ <div class="mx-auto w-50 mt-1">
+  <h4 >{{searchResultMessage}}</h4>
+ </div>
+  <div class="container mt-3 mb-4" *ngFor="let article of searchResults">
+    <div class="d-flex justify-content-center row p-2 bg-white border rounded">
+      <div class="col-md-3 mt-1">
+        <img class="img-fluid img-responsive rounded product-image" [src]="article.article_picture">
       </div>
-      <div class="cat-cart d-flex">
-        <button id="btn-cart" pButton pRipple icon="pi pi-shopping-cart" type="button" (click)="addToCart(article)"
-        class="p-button-outlined p-button-rounded p-button-success" [disabled]="article.article_quantity < 1"></button>
-        <h6 class="text-success">{{article.article_category}}</h6>
+      <div class="col-md-6 mt-1">
+        <h5>{{article.article_name}}</h5>
+        <p class="para mb-0">{{article.article_description}}<br><br></p>
       </div>
-      <div class="d-flex flex-column mt-4">
-        <button class="btn btn-primary btn-sm" type="button" [routerLink] = "['/single-product/', article.id]">Details</button>
-        <button class="btn btn-outline-primary btn-sm mt-2" type="button">Ajouter aux préférences</button>
+      <div class="align-items-center align-content-center col-md-3 border-left mt-1">
+        <div class="d-flex flex-row align-items-center">
+          <h4 class="mr-1">{{article.article_price}} Fcfa</h4>
+        </div>
+        <div class="cat-cart d-flex">
+          <button id="btn-cart" pButton pRipple icon="pi pi-shopping-cart" type="button" (click)="addToCart(article)"
+          class="p-button-outlined p-button-rounded p-button-success" [disabled]="article.article_quantity < 1"></button>
+          <h6 class="text-success">{{article.article_category}}</h6>
+        </div>
+        <div class="d-flex flex-column mt-4">
+          <button class="btn btn-primary btn-sm" type="button" [routerLink] = "['/single-product/', article.id]">Details</button>
+          <button class="btn btn-outline-primary btn-sm mt-2" type="button">Ajouter aux préférences</button>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-<p-paginator [rows]="nbProduct" [totalRecords]="total" (onPageChange)="paginate($event)"></p-paginator>
+<div *ngIf="!showSearchResult">
+  <div class="container mt-3 mb-4" *ngFor="let article of articles">
+    <div class="d-flex justify-content-center row p-2 bg-white border rounded">
+      <div class="col-md-3 mt-1">
+        <img class="img-fluid img-responsive rounded product-image" [src]="article.article_picture">
+      </div>
+      <div class="col-md-6 mt-1">
+        <h5>{{article.article_name}}</h5>
+        <p class="para mb-0">{{article.article_description}}<br><br></p>
+      </div>
+      <div class="align-items-center align-content-center col-md-3 border-left mt-1">
+        <div class="d-flex flex-row align-items-center">
+          <h4 class="mr-1">{{article.article_price}} Fcfa</h4>
+        </div>
+        <div class="cat-cart d-flex">
+          <button id="btn-cart" pButton pRipple icon="pi pi-shopping-cart" type="button" (click)="addToCart(article)"
+          class="p-button-outlined p-button-rounded p-button-success" [disabled]="article.article_quantity < 1"></button>
+          <h6 class="text-success">{{article.article_category}}</h6>
+        </div>
+        <div class="d-flex flex-column mt-4">
+          <button class="btn btn-primary btn-sm" type="button" [routerLink] = "['/single-product/', article.id]">Details</button>
+          <button class="btn btn-outline-primary btn-sm mt-2" type="button">Ajouter aux préférences</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <p-paginator [rows]="nbProduct" [totalRecords]="total" (onPageChange)="paginate($event)"></p-paginator>
+
+</div>
+
 
 <!--
 
